# fastapi-template

./: .dockerignore  .env  .gitignore  .pylintrc  Dockerfile  LICENSE  Pipfile  README.md  alembic.ini  docker-compose-prod.yml  docker-compose.yml  gunicorn_conf.py  initial_data.py  main.py  pyproject.toml  pytest.ini  requirements.txt  start.sh
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: pylint.yml  test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 3b2fc47764d5_add_name_to_users.py  55aa0c52d756_create_table_user.py  c31d6544d852_migration_users.py  d049c9f7ea8d_uuid_user.py
app/: app.py
app/api/api_v1/: api.py  deps.py
app/api/api_v1/endpoints/: auth.py  health.py  users.py
app/api/api_v1/service/: filters_user.py
app/api/api_v1/services/: filters_user.py
app/core/: security.py  settings.py
app/db/: connection.py  redis_connection.py
app/db/repositories/: user.py  users.py
app/middlewares/: authentication.py  exception_handler.py  utils_header.py
app/models/: user.py  users.py
app/tests/: conftest.py  test_db_connection.py  test_main.py
app/tests/api/routes/: test_health.py  test_users.py
app/tests/utils/: user.py  users.py  utils.py
app/utils/: custom_pagination.py  indentifier.py  logger.py  logging_config.py
nginx/: Dockerfile  nginx.conf
tests/: conftest.py  test_db_connection.py
tests/api/routes/: test_users.py
tests/utils/: users.py
