[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "colorlog>=6.10.1",
    "fastapi[standard]>=0.135.2",
    "gunicorn>=25.2.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pytest>=9.0.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.25",
]

[tool.ruff]
target-version = "py312"
src = ["app"]
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]


[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
testpaths = ["./tests"]
python_files = ["test_*.py", "*_test.py"]
log_cli = true
log_level = "INFO"
addopts = [
    "-ra",
    "-v",
    "--tb=auto",
    "--color=auto",
    "--exitfirst",
    "--cov=app",
    "--cov-report=term-missing",
]
markers = [
    "unit: fast isolated tests",
    "integration: tests with external systems",
    "api: http contract tests",
]


[tool.alembic]
script_location = "%(here)s/alembic"
prepend_sys_path = ["."]
output_encoding = "utf-8"

[[tool.alembic.post_write_hooks]]
name = "ruff"
type = "module"
module = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff"
type = "exec"
executable = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"
